--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -6,9 +6,12 @@
     padding-top: 54px;
 
     &__inner {
+        --inner-max-height: min(582px, 100vh - 158px);
+        --inner-padding: 30px;
+
         position: relative;
-        max-height: min(582px, 100vh - 158px);
-        padding: 30px;
+        max-height: var(--inner-max-height);
+        padding: var(--inner-padding);
 
         border-radius: 20px;
         background: var(--dropdown-bg-color);
@@ -26,12 +29,13 @@
 }
 
 .top-menu {
-    height: 100%;
+    max-height: calc(var(--inner-max-height) - var(--inner-padding) * 2);
 
     &__main {
         width: 292px;
-        height: 100%;
+        max-height: inherit;
         border-right: 1px solid var(--top-menu-border-color);
+        overflow-y: auto;
     }
 }
 
@@ -66,6 +70,7 @@
         bottom: 0;
         width: 24px;
         height: 24px;
+        filter: var(--menu-column-icon-color);
     }
 
     &__heading {
