--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -10,7 +10,7 @@
         margin-left: 34px;
     }
 
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.breakpoint(md) {
         margin-left: unset;
     }
 
