--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -1,3 +1,5 @@
+@use "../abstracts";
+
 html.dark {
     --text-color: #fff;
     --icon-color: brightness(0) saturate(100%) invert(100%) sepia(94%)
@@ -10,10 +12,16 @@ html.dark {
     --top-act-group-separate: #ededf6;
     --top-act-user-shadow: rgba(0, 0, 0, 0.08);
 
+    @include abstracts.breakpoint(lg) {
+        --header-bg-shadow: rgba(0, 0, 0, 0.2);
+    }
+
     // Dropdown
     --dropdown-bg-color: #292e39;
     --dropdown-shadow: rgba(23, 28, 40, 0.4);
     --dropdown-arrow-color: brightness(0) saturate(100%) invert(13%) sepia(15%)
         saturate(1039%) hue-rotate(183deg) brightness(91%) contrast(85%);
     --top-menu-border-color: #171c28;
+    --menu-column-icon-color: brightness(0) saturate(100%) invert(99%) sepia(3%)
+        saturate(403%) hue-rotate(246deg) brightness(99%) contrast(98%);
 }
